# lsdelta

./: .gitignore  Makefile  README.md  gen_lsdelta_tests.py  lsdelta.c  lsdelta.h  lsdelta_py.c  lsdelta_tests.json  py_tests.py  pylsdelta.py  pyproject.toml  test_lsdelta.c  test_lsdelta_tests.inc.c
.github/workflows/: build_wheels.yml
c_gmp/: .gitignore  Makefile  gen_lsdelta_tests.py  test_lsdelta.c  test_lsdelta_tests.inc.c
dev/: DevNotes.md  isolated-dist-test.sh  requirements.txt
lsdelta/: __init__.pyi
lsdelta_ct/: __init__.py
lsdelta_pp/: __init__.py
py_c/: Makefile  README.md  py_tests.py  pyproject.toml
tests/: lsdelta_tests.json  test_lsdelta.py
