[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lsdelta"
description = "Least Significant Digit Delta"
version = "0.9"
authors = [ { name="Hauke D", email="haukex@zero-g.net" } ]
readme = "README.md"
requires-python = ">=3.9"
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 3 - Alpha",
    #"Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/haukex/lsdelta"
"Bug Tracker" = "https://github.com/haukex/lsdelta/issues"

# the error "Additional properties are not allowed" from "Even Better TOML" can be ignored here:
[tool.setuptools]
packages = ["lsdelta"]
ext-modules = [
    { name = "lsdelta", sources = ["lsdelta_py.c"] },
]
